# ChessStrike

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt
inc/: ConnectionPool.h  Controller.h  Data.h  ThreadPool.h
public/css/: home.css
public/html/: game.html  home.html  index.html  player.html  profile.html  viewer.html  watcher.html
public/js/: home.js  player.js  viewer.js  watcher.js
src/: Controller.cpp  Data.cpp  Routes.cpp  main.cpp
views/: index.html
